# movieDB

./: Cargo.toml
src/: main.rs
src/modules/: database.rs  listview.rs  messagebox.rs  mod.rs  text_input.rs
