[package]
name = "movieDB"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.14"

[features]
scale = []
default = []
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Headers",
    "Response",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
